--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    height: fit-content;
     margin: 0;
     padding: 0;
     color: white;
@@ -63,6 +63,7 @@ html, body {
     text-align: center;
     background-color: black;
     padding-bottom: 5vh;
+    min-height: 85%;
 }
 
 .header {
@@ -72,7 +73,7 @@ html, body {
     font-size: 5vh;
 }
 
-#apiContent {
+#apiContent, #localContent {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 1.5vw;
