--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -55,6 +55,27 @@ html, body {
     display: initial;
     margin: 0;
 }
+
+.show_dropdown {
+    height: fit-content !important;
+}
+
+.search_dropdown {
+    position: fixed;
+    font-size: 2.5vh;
+    text-align: center;
+    width: 100%;
+    height: 0;
+    background-color: #546973;
+    transition: all 0.3s;
+}
+
+.drpdwn_context {
+    color: black;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    text-decoration: none;
+}
 /* ------------------------------------------------------------------------ */
 
 
@@ -73,7 +94,7 @@ html, body {
     font-size: 5vh;
 }
 
-#apiContent, #localContent {
+#apiContent, #localContent, #searchContent {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 1.5vw;
