started filter but removed it off nav bar due to time restrictions

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -37,7 +37,7 @@
         <a href="{% url "Local" %}" class="nav-buttons">Local</a>
         {%comment %} drop downs {% endcomment %}
         <p class="nav-buttons drop_down" id="showSearchDropDown">Search</p>
-        <p class="nav-buttons drop_down">Filter</p>
+        {% comment %} <a href="{% url "filter" %}" class="nav-buttons">Filter</a> {% endcomment %}
         
         {% comment %} --------- {% endcomment %} {% comment %}{% endcomment %}
         {% comment %} animated dog html {% endcomment %} {% comment %}
