added a fake donation button to implement models

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -39,6 +39,7 @@
         {%comment %} drop downs {% endcomment %}
         <p class="nav-buttons drop_down" id="showSearchDropDown">Search</p>
         {% comment %} <a href="{% url "filter" %}" class="nav-buttons">Filter</a> {% endcomment %}
+        <a href="{% url "donate" %}" class="nav-buttons">Donate</a>
         
         {% comment %} --------- {% endcomment %} {% comment %}{% endcomment %}
         {% comment %} animated dog html {% endcomment %} {% comment %}
