--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -96,6 +96,7 @@ html, body {
 .header {
     color: rgb(250, 102, 9);
     margin-top: 10vh;
+    margin-bottom: 0;
     padding-top: 5vh;
     font-size: 5vh;
 }
