--- a/app/templates/local_centers.html
+++ b/app/templates/local_centers.html
@@ -4,6 +4,7 @@
   <div id="allPets">
     <div class="main_content">
       <h1 class="header">100 Newest Animals in Your State</h1>
+      <p class="header_warn">WARNING: information may be inacurate if your vpn is active</p>
       <div id="localContent"></div>
     </div>
   </div>
